[package]
name = "use-rust-in-react"
version = "0.1.0"
authors = ["Wison Ye <wisonye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.45"
lazy_static = "1.4.0"
nalgebra = "0.22.1"
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.45"
features = [
    "Document", 
    "Element", 
    "EventTarget", 
    "HtmlCanvasElement", 
    "MouseEvent", 
    "WebGlBuffer", 
    "WebGlProgram", 
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
]
